syntax = "proto3";

package bacs.archive.problem;
option go_package = "problem";

message IdSet {
  repeated string id = 1;
}
